fix: POST auth was missing from docs
